# intruducer

./: Cargo.toml  LICENSE.md  README.md
examples/: evil.rs  intruducer.rs  victim.rs
src/: constants.rs  error.rs  ext.rs  lib.rs  proc.rs  utils.rs
src/ext/: elf.rs  mod.rs  path.rs
src/ext/proc/: android.rs  intruducer.rs  mod.rs
src/os/: gid.rs  mod.rs  ptrace_scope.rs  uid.rs  virt_addr.rs
src/payloads/: arm.rs  arm64.rs  mod.rs  x86.rs  x86_64.rs
src/proc/: class.rs  id.rs  lib.rs  mod.rs  sym.rs
src/tiny_asm/: arm.rs  arm64.rs  mod.rs  x86.rs  x86_64.rs
tiny_asm/: Cargo.toml
tiny_asm/src/: arm.rs  arm64.rs  encodable.rs  label.rs  lib.rs  x86.rs  x86_64.rs
tiny_asm/src/arm/: addr_mode.rs  addr_mode_2.rs  mod.rs  op.rs  reg.rs
tiny_asm/src/arm64/: mod.rs  op.rs  reg.rs  shift.rs
tiny_asm/src/x86/: mod.rs  op.rs
tiny_asm/src/x86_64/: mod.rs  op.rs
